--- a/share/man/man4/cz.4
+++ b/share/man/man4/cz.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cz.4,v 1.1 2001/06/21 13:37:58 nate Exp $
+.\"	$OpenBSD: cz.4,v 1.2 2001/06/22 11:39:21 mpech Exp $
 .\"	$NetBSD: cz.4,v 1.3 2001/06/12 14:46:11 wiz Exp $
 .\"
 .\" Copyright (c) 2000 Zembu Labs, Inc.
@@ -98,8 +98,8 @@ The MIPS CPU on the board performs all flow-control handling.
 .\" XXX too be done.
 .Sh SEE ALSO
 .Xr pci 4 ,
-.Xr tty 4 ,
-.Xr termios 4
+.Xr termios 4 ,
+.Xr tty 4
 .Sh HISTORY
 The
 .Nm
@@ -119,7 +119,7 @@ Interrupt mode has not been tested.
 .Pp
 There is no support for reading or writing the EEPROM connected to
 the PLX PCI bus controller.
-.Sh AUTHOR
+.Sh AUTHORS
 The
 .Nm
 driver was written by
