--- a/share/man/man4/an.4
+++ b/share/man/man4/an.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: an.4,v 1.14 2001/04/06 19:15:04 deraadt Exp $
+.\"	$OpenBSD: an.4,v 1.15 2001/06/22 12:15:43 mpech Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu>. All rights reserved.
@@ -109,11 +109,11 @@ The Aironet card failed to generate an interrupt to acknowledge a transmit
 command.
 .El
 .Sh SEE ALSO
-.Xr wi 4
 .Xr arp 4 ,
 .Xr netintro 4 ,
-.Xr ifconfig 8 ,
-.Xr ancontrol 8
+.Xr wi 4 ,
+.Xr ancontrol 8 ,
+.Xr ifconfig 8
 .Sh HISTORY
 The
 .Nm
