--- a/share/man/man4/awi.4
+++ b/share/man/man4/awi.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: awi.4,v 1.7 2000/12/21 21:01:14 aaron Exp $
+.\"	$OpenBSD: awi.4,v 1.8 2001/06/22 12:15:44 mpech Exp $
 .\"     $NetBSD: awi.4,v 1.1 1999/11/04 19:36:01 sommerfeld Exp $
 .\"
 .Dd October 31, 1999
@@ -78,12 +78,12 @@ The access point the card was most recently associated with has
 forgotten about us.
 .El
 .Sh SEE ALSO
-.Xr ray 4 ,
 .Xr arp 4 ,
 .Xr netintro 4 ,
 .Xr pcmcia 4 ,
-.Xr ifconfig 8 ,
-.Xr awiconfig 8
+.Xr ray 4 ,
+.Xr awiconfig 8 ,
+.Xr ifconfig 8
 .Rs
 .%T Am79C930 PCnet Mobile Single-Chip Wireless LAN Media Access Controller
 .%O http://www.amd.com
