--- a/share/man/man4/boca.4
+++ b/share/man/man4/boca.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: boca.4,v 1.4 2000/10/18 02:38:21 aaron Exp $
+.\"	$OpenBSD: boca.4,v 1.5 2001/06/22 12:15:44 mpech Exp $
 .\"
 .\" Copyright (c) 1990, 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -64,7 +64,7 @@ For 16-port BB2016 boards:
 and is configured as such.)
 .Sh DESCRIPTION
 The
-.Nm boca
+.Nm
 driver provides support for BOCA Research BB1004, BB1008, and BB2016
 boards that multiplex together up to four, eight, or sixteen
 .Tn EIA
