--- a/share/man/man4/eephy.4
+++ b/share/man/man4/eephy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: eephy.4,v 1.1 2001/04/13 01:30:34 deraadt Exp $
+.\"	$OpenBSD: eephy.4,v 1.2 2001/06/22 12:15:44 mpech Exp $
 .\"
 .\"Copyright (c) 2001 by Parag Patel.  All rights reserved.
 .\"
@@ -41,7 +41,7 @@ The
 .Nm
 driver supports Marvell 88E1000 PHY interface found on
 Intel PRO/1000 Gigabit Ethernet cards (see
-.Xr wx 4 ).
+.Xr wx 4 ) .
 .Sh SEE ALSO
 .Xr ifmedia 4 ,
 .Xr intro 4 ,
