--- a/share/man/man4/ef.4
+++ b/share/man/man4/ef.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ef.4,v 1.7 2000/11/10 20:02:16 todd Exp $
+.\"	$OpenBSD: ef.4,v 1.8 2001/06/22 12:15:44 mpech Exp $
 .\"
 .\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -39,7 +39,7 @@
 .Cd "ef* at isapnp?"
 .Sh DESCRIPTION
 The
-.Nm ef
+.Nm
 device driver supports the 3Com Fast EtherLink ISA family
 of Ethernet cards, and embedded controllers based on the 3Com
 .Dq corkscrew
