--- a/share/man/man4/enc.4
+++ b/share/man/man4/enc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: enc.4,v 1.12 2001/05/30 03:24:16 millert Exp $
+.\"	$OpenBSD: enc.4,v 1.13 2001/06/22 12:15:44 mpech Exp $
 .\"
 .Dd October 7, 1999
 .Dt ENC 4
@@ -50,10 +50,10 @@ or all incoming packets after they have been similarly processed:
 #> tcpdump -i enc0
 .Ed
 .Sh SEE ALSO
-.Xr tcpdump 8 ,
 .Xr bpf 4 ,
 .Xr inet 4 ,
 .Xr ipsec 4 ,
 .Xr netintro 4 ,
 .\".Xr ipf 5 ,
+.Xr tcpdump 8 ,
 .Xr vpn 8
