--- a/share/man/man4/fxp.4
+++ b/share/man/man4/fxp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fxp.4,v 1.16 2000/10/18 02:38:22 aaron Exp $
+.\"	$OpenBSD: fxp.4,v 1.17 2001/06/22 12:15:45 mpech Exp $
 .\"
 .\" Copyright (c) 1997 David E. O'Brien
 .\"
@@ -109,9 +109,9 @@ the network connection (cable).
 .Xr ie 4 ,
 .Xr ifmedia 4 ,
 .Xr inphy 4 ,
-.Xr iy 4 ,
 .Xr intro 4 ,
 .Xr iophy 4 ,
+.Xr iy 4 ,
 .Xr netintro 4 ,
 .Xr nsphy 4 ,
 .Xr ifconfig 8
