--- a/share/man/man4/gdt.4
+++ b/share/man/man4/gdt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gdt.4,v 1.11 2000/11/10 20:02:16 todd Exp $
+.\"	$OpenBSD: gdt.4,v 1.12 2001/06/22 12:15:45 mpech Exp $
 .\"
 .\" Copyright (c) 2000 Niklas Hallqvist.  All rights reserved.
 .\"
@@ -57,6 +57,7 @@ driver provides support for the following adapters:
 .Tn GDT6x29RD ,
 .Tn GDT7x19RN ,
 .Tn GDT7x29RN .
+.El
 .Pp
 Although only the
 .Tn GDT6x27RP
@@ -90,7 +91,7 @@ inspired by the Linux driver by
 .An Achim Luebner Aq achim@vortex.de .
 .Sh HISTORY
 The
-.Nm gdt
+.Nm
 driver first appeared in
 .Ox 2.7 .
 .Sh BUGS
