--- a/share/man/man4/hifn.4
+++ b/share/man/man4/hifn.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hifn.4,v 1.13 2001/05/14 09:02:55 deraadt Exp $
+.\"	$OpenBSD: hifn.4,v 1.14 2001/06/22 12:15:45 mpech Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt
 .\" All rights reserved.
@@ -45,11 +45,11 @@ No longer being made.  Came as 128KB SRAM model, or 2MB DRAM model.
 Reference board with 512KB SRAM.
 .It PowerCrypt
 See
-.Pa www.powercrypt.com.
+.Pa http://www.powercrypt.com/ .
 Comes with 512KB SRAM.
 .It NetSec 7751
 See
-.Pa www.netsec.net.
+.Pa http://www.netsec.net/ .
 Supports the most IPSEC sessions, with 1MB SRAM.
 .El
 .Pp
