--- a/share/man/man4/ip6.4
+++ b/share/man/man4/ip6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ip6.4,v 1.6 2001/03/01 16:11:17 aaron Exp $
+.\"	$OpenBSD: ip6.4,v 1.7 2001/06/22 12:15:45 mpech Exp $
 .\"	$KAME: ip6.4,v 1.12 2000/06/08 21:19:39 itojun Exp $
 .\"
 .\" Copyright (C) 1999 WIDE Project.
@@ -62,17 +62,14 @@
 .Dd December 17, 1999
 .Dt IP6 4
 .Os
-.\"
 .Sh NAME
 .Nm ip6
 .Nd Internet Protocol version 6 (IPv6)
-.\"
 .Sh SYNOPSIS
 .Fd #include <sys/socket.h>
 .Fd #include <netinet/in.h>
 .Ft int
 .Fn socket AF_INET6 SOCK_RAW proto
-.\"
 .Sh DESCRIPTION
 .Tn IPv6
 is the network layer protocol used by the Internet protocol version 6 family
