--- a/share/man/man4/isa.4
+++ b/share/man/man4/isa.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isa.4,v 1.5 2001/05/14 14:44:41 jason Exp $
+.\"	$OpenBSD: isa.4,v 1.6 2001/06/22 12:15:46 mpech Exp $
 .\"	$NetBSD: isa.4,v 1.19 2000/03/18 16:54:37 augustss Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -38,7 +38,6 @@
 .Nm isa
 .Nd introduction to ISA bus support
 .Sh SYNOPSIS
-.Pp
 .Cd "isa0 at mainbus0"
 .Cd "isa0 at pcib?"
 .Pp
