--- a/share/man/man4/maestro.4
+++ b/share/man/man4/maestro.4
@@ -1,4 +1,4 @@
-.\"   $OpenBSD: maestro.4,v 1.3 2001/03/29 17:03:29 aaron Exp $
+.\"   $OpenBSD: maestro.4,v 1.4 2001/06/22 12:15:46 mpech Exp $
 .\"
 .\" Copyright (c) 2001 Marc Espie.
 .\" All rights reserved.
@@ -43,7 +43,7 @@ does not support maestro 3 cards, which are entirely different.
 Maestro cards have direct support for 16 bit signed little-endian
 mono and stereo, 8 bit signed and unsigned mono and stereo. Other encodings
 are emulated in software. Sampling range is 4000 - 48000 Hz, with roughly
-a 2Hz resolution.
+a 2 Hz resolution.
 .Pp
 Maestro cards have some DSP and dolby digital 5:1 hardware, but this driver
 does not support it.
