--- a/share/man/man4/pcmcia.4
+++ b/share/man/man4/pcmcia.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pcmcia.4,v 1.16 2001/03/05 15:13:41 aaron Exp $
+.\"	$OpenBSD: pcmcia.4,v 1.17 2001/06/22 12:15:46 mpech Exp $
 .\"	$NetBSD: pcmcia.4,v 1.4 1998/06/07 09:10:30 enami Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -49,7 +49,7 @@
 .Pp
 .Sh INTRODUCTION
 The
-.Nm pcmcia
+.Nm
 subsystem provides machine-independent bus support and
 drivers for PCMCIA (PC Card)
 devices.
