--- a/share/man/man4/rln.4
+++ b/share/man/man4/rln.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rln.4,v 1.9 2000/12/21 21:01:18 aaron Exp $
+.\"	$OpenBSD: rln.4,v 1.10 2001/06/22 12:15:46 mpech Exp $
 .\"
 .Dd 2 April, 1999
 .Dt RLN 4
@@ -102,13 +102,13 @@ and a description of your card (via
 .Xr sendbug 1 ) .
 .El
 .Sh SEE ALSO
+.Xr cnw 4 ,
 .Xr intro 4 ,
 .Xr isa 4 ,
 .\" .Xr isapnp 4 ,
 .Xr pcmcia 4 ,
-.Xr cnw 4 ,
 .Xr ifconfig 8 ,
-.Pa "http://www.proxim.com/"
+.Pa http://www.proxim.com/
 .Sh AUTHORS
 David Leonard,
 Dept Computer Science and Electrical Engineering, University of Queensland
