--- a/share/man/man4/rtfps.4
+++ b/share/man/man4/rtfps.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rtfps.4,v 1.3 2000/10/18 02:38:23 aaron Exp $
+.\"	$OpenBSD: rtfps.4,v 1.4 2001/06/22 12:15:46 mpech Exp $
 .\"
 .\" Copyright (c) 1990, 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -48,7 +48,7 @@
 .Cd "com* at rtfps0 slave 0"
 .Sh DESCRIPTION
 The
-.Nm rtfps
+.Nm
 driver provides support for IBM RT PC boards that multiplex together up to four
 .Rn EIA
 .Tn RS-232C
