--- a/share/man/man4/st.4
+++ b/share/man/man4/st.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: st.4,v 1.5 2000/07/10 13:27:35 aaron Exp $
+.\"	$OpenBSD: st.4,v 1.6 2001/06/22 12:15:47 mpech Exp $
 .\"	$NetBSD: st.4,v 1.2 1996/10/20 23:15:24 explorer Exp $
 .\"
 .\" Copyright (c) 1996
@@ -345,8 +345,8 @@ This
 driver was originally written for
 .Tn Mach
 2.5 by Julian Elischer, and was ported to
-.Tn NetBSD
+.Nx
 by Charles Hannum.
 This man page was edited for
-.Tn NetBSD
+.Nx
 by Jon Buller.
