--- a/share/man/man4/ti.4
+++ b/share/man/man4/ti.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ti.4,v 1.13 2001/03/08 06:18:35 aaron Exp $
+.\"	$OpenBSD: ti.4,v 1.14 2001/06/22 12:15:47 mpech Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -42,7 +42,7 @@
 .Cd "ti* at pci? dev ? function ?"
 .Sh DESCRIPTION
 The
-.Nm ti
+.Nm
 driver provides support for PCI Gigabit Ethernet adapters based on
 the Alteon Networks Tigon Gigabit Ethernet controller chip.
 The Tigon contains an embedded R4000 CPU, Gigabit MAC, dual DMA channels and
