--- a/share/man/man4/tun.4
+++ b/share/man/man4/tun.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tun.4,v 1.18 2001/03/05 04:01:21 angelos Exp $
+.\"	$OpenBSD: tun.4,v 1.19 2001/06/22 12:15:47 mpech Exp $
 .\"
 .Dd March 10, 1996
 .Dt TUN 4
@@ -10,18 +10,18 @@
 .Cd "pseudo-device tun 4"
 .Sh DESCRIPTION
 The
-.Nm tun
+.Nm
 interface is a software loopback mechanism that can be loosely
 described as the network interface analog of the
 .Xr pty 4 ,
 that is,
-.Nm tun
+.Nm
 does for network interfaces what the
 .Nm pty
 driver does for terminals.
 .Pp
 The
-.Nm tun
+.Nm
 driver, like the
 .Nm pty
 driver, provides two interfaces: an interface like the usual facility
