--- a/share/man/man4/vlan.4
+++ b/share/man/man4/vlan.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: vlan.4,v 1.9 2001/05/13 11:37:30 fgsch Exp $
+.\" $OpenBSD: vlan.4,v 1.10 2001/06/22 12:15:47 mpech Exp $
 .\"
 .Dd January 9, 2000
 .Dt VLAN 4
@@ -10,7 +10,7 @@
 .Cd pseudo-device vlan Op Ar count
 .Sh DESCRIPTION
 The
-.Nm vlan
+.Nm
 Ethernet interface allows construction of virtual LANs when used in
 conjunction with IEEE 802.1Q-compliant Ethernet devices.
 .Pp
