--- a/share/man/man4/aue.4
+++ b/share/man/man4/aue.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: aue.4,v 1.3 2000/10/13 04:42:11 aaron Exp $
+.\" $OpenBSD: aue.4,v 1.4 2001/06/22 12:15:44 mpech Exp $
 .\" $NetBSD: aue.4,v 1.3 2000/02/12 15:05:48 augustss Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
@@ -134,9 +134,9 @@ The driver failed to allocate an mbuf for the receiver ring.
 .El
 .Sh SEE ALSO
 .Xr arp 4 ,
-.Xr ifconfig 8 ,
 .Xr netintro 4 ,
-.Xr usb 4
+.Xr usb 4 ,
+.Xr ifconfig 8
 .Rs
 .%T ADMtek AN986 data sheet
 .%O http://www.admtek.com.tw
