--- a/share/man/man4/cd.4
+++ b/share/man/man4/cd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cd.4,v 1.8 2000/12/21 05:32:52 aaron Exp $
+.\"	$OpenBSD: cd.4,v 1.9 2001/06/22 12:15:44 mpech Exp $
 .\"	$NetBSD: cd.4,v 1.3 1996/10/20 23:15:21 explorer Exp $
 .\"
 .\" Copyright (c) 1996
@@ -37,7 +37,7 @@
 .Cd cd1 at scsibus0 target 4 lun 0
 .Sh DESCRIPTION
 The
-.Nm cd
+.Nm
 driver provides support for a SCSI CD-ROM (Compact Disc-Read Only Memory)
 drive.
 In an attempt to look like a regular disk, the
