--- a/share/man/man4/cnw.4
+++ b/share/man/man4/cnw.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cnw.4,v 1.4 2000/12/21 05:32:52 aaron Exp $
+.\"	$OpenBSD: cnw.4,v 1.5 2001/06/22 12:15:44 mpech Exp $
 .\"
 .\" Copyright (c) 1999 Federico G. Schwindt.
 .\" All rights reserved.
@@ -61,6 +61,7 @@ are valid;
 .Li 0
 (no scrambling)
 is the default if this option is not defined.
+.El
 .Sh SEE ALSO
 .Xr netintro 4 ,
 .Xr pcmcia 4 ,
