--- a/share/man/man4/cue.4
+++ b/share/man/man4/cue.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: cue.4,v 1.4 2001/05/03 02:25:33 aaron Exp $
+.\" $OpenBSD: cue.4,v 1.5 2001/06/22 12:15:44 mpech Exp $
 .\" $NetBSD: cue.4,v 1.2 2000/01/16 13:54:39 augustss Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999, 2000
@@ -76,9 +76,9 @@ The driver failed to allocate an mbuf for the receiver ring.
 .El
 .Sh SEE ALSO
 .Xr arp 4 ,
-.Xr ifconfig 8 ,
 .Xr netintro 4 ,
-.Xr usb 4
+.Xr usb 4 ,
+.Xr ifconfig 8
 .Sh HISTORY
 The
 .Nm
