--- a/share/man/man4/cy.4
+++ b/share/man/man4/cy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cy.4,v 1.4 2000/12/21 05:32:52 aaron Exp $
+.\"	$OpenBSD: cy.4,v 1.5 2001/06/22 12:15:44 mpech Exp $
 .\"
 .\" Copyright (c) 1993 Andrew Herbert.
 .\" All rights reserved.
@@ -73,6 +73,7 @@ Reducing the value of the \fIRxFifoThreshold\fR #define from 8 to something
 smaller may help slow machines avoid this problem.
 The driver must have been compiled with the \fILogOverruns\fR option
 defined (the default) in order for this condition to be logged.
+.El
 .Sh SEE ALSO
 .Xr com 4 ,
 .Xr termios 4 ,
