--- a/share/man/man4/dpt.4
+++ b/share/man/man4/dpt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dpt.4,v 1.8 2001/04/10 18:05:49 ian Exp $
+.\"	$OpenBSD: dpt.4,v 1.9 2001/06/22 12:15:44 mpech Exp $
 .\"	$NetBSD: dpt.4,v 1.7 2000/01/17 16:34:44 ad Exp $
 .\"
 .\" Copyright (c) 1999, 2000 Andy Doran <ad@NetBSD.org>
@@ -66,9 +66,9 @@ A spurious interrupt was received from the HBA.
 A corrupt or incomplete status packet was received from the HBA.
 .El
 .Sh SEE ALSO
-.Xr intro 4 ,
 .Xr cd 4 ,
 .Xr ch 4 ,
+.Xr intro 4 ,
 .Xr scsi 4 .
 .Xr sd 4 ,
 .Xr st 4
@@ -84,7 +84,7 @@ and
 drivers, which are the work of others.
 .Sh HISTORY
 The
-.Nm dpt
+.Nm
 driver first appeared in
 .Ox 2.5 .
 .Sh BUGS
