--- a/share/man/man4/eap.4
+++ b/share/man/man4/eap.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: eap.4,v 1.8 2001/05/17 02:10:29 brad Exp $
+.\" $OpenBSD: eap.4,v 1.9 2001/06/22 12:15:44 mpech Exp $
 .\" $NetBSD: eap.4,v 1.2 1998/05/06 19:14:06 augustss Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -49,8 +49,8 @@ sound cards, as well as the Creative Labs SoundBlaster PCI128.
 The driver also supports many revisions of the more modern Ensoniq
 AudioPCI 97 (ES1371).
 .Sh SEE ALSO
-.Xr audio 4 ,
-.XR ac97 4
+.Xr ac97 4 ,
+.Xr audio 4
 .Sh HISTORY
 The
 .Nm
