--- a/share/man/man4/ec.4
+++ b/share/man/man4/ec.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ec.4,v 1.9 2000/10/18 02:38:22 aaron Exp $
+.\"	$OpenBSD: ec.4,v 1.10 2001/06/22 12:15:44 mpech Exp $
 .\"     $NetBSD: ec.4,v 1.4 1998/08/09 00:39:02 thorpej Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -46,7 +46,7 @@
 .Cd "ec0 at isa? port 0x250 iomem 0xd8000 irq 9"
 .Sh DESCRIPTION
 The
-.Nm ec
+.Nm
 device driver supports 3Com EtherLink II (3C503) Ethernet cards.
 Other models of 3Com network cards are supported by the
 .Xr ef 4 ,
@@ -93,6 +93,7 @@ The memory test was unable to clear the interface's shared memory
 region.  This often indicates that the card is configured at a conflicting
 .Em iomem
 address.
+.El
 .Sh SEE ALSO
 .Xr ef 4 ,
 .Xr eg 4 ,
