--- a/share/man/man4/esis.4
+++ b/share/man/man4/esis.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: esis.4,v 1.5 2000/04/16 17:44:33 aaron Exp $
+.\"	$OpenBSD: esis.4,v 1.6 2001/06/22 12:15:45 mpech Exp $
 .\"	$NetBSD: esis.4,v 1.3 1994/11/30 16:22:12 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
@@ -86,7 +86,7 @@ issuing an
 .Dv SIOCSSTYPE
 .Xr ioctl 2 ,
 which is defined in
-.Pa /sys/netiso/iso_snpac.h.
+.Pa /sys/netiso/iso_snpac.h .
 .Pp
 The protocol behaves differently depending on whether the System is
 configured as an End System or an Intermediate System.
