--- a/share/man/man4/fpa.4
+++ b/share/man/man4/fpa.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fpa.4,v 1.10 2001/03/01 16:11:16 aaron Exp $
+.\"	$OpenBSD: fpa.4,v 1.11 2001/06/22 12:15:45 mpech Exp $
 .\"	$NetBSD: fpa.4,v 1.2 1997/02/18 01:07:46 jonathan Exp $
 .\"
 .\" Copyright (c) 1995, Matt Thomas
@@ -6,7 +6,6 @@
 .\"
 .Dd March 13, 1995
 .Dt FPA 4
-.Dt FEA 4
 .Os
 .Sh NAME
 .Nm fpa ,
@@ -17,7 +16,7 @@
 .Cd "fea* at eisa?"
 .Sh DESCRIPTION
 The
-.Nm fpa
+.Nm
 and
 .Nm fea
 device driver provides support for the DEC DEFPA PCI FDDI Controller and
@@ -47,7 +46,7 @@ processing.
 .Xr ifconfig 8
 .Sh AUTHORS
 The
-.Nm fpa
+.Nm
 and
 .Nm fea
 device driver and manual page was written by Matt Thomas.
