--- a/share/man/man4/icmp6.4
+++ b/share/man/man4/icmp6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: icmp6.4,v 1.4 2001/03/01 16:11:17 aaron Exp $
+.\"	$OpenBSD: icmp6.4,v 1.5 2001/06/22 12:15:45 mpech Exp $
 .\"	$KAME: icmp6.4,v 1.3 2000/11/24 08:44:40 itojun Exp $
 .\"
 .\" Copyright (C) 1999 WIDE Project.
@@ -62,18 +62,15 @@
 .Dd December 17, 1999
 .Dt ICMP6 4
 .Os
-."
 .Sh NAME
 .Nm icmp6
 .Nd Internet Control Message Protocol for IPv6
-."
 .Sh SYNOPSIS
 .Fd #include <sys/socket.h>
 .Fd #include <netinet/in.h>
 .Fd #include <netinet/icmp6.h>
 .Ft int
 .Fn socket AF_INET6 SOCK_RAW proto
-."
 .Sh DESCRIPTION
 .Tn ICMPv6
 is the error and control message protocol used
@@ -209,7 +206,6 @@ raw socket is created, it will by default pass all
 message types to the application.
 .Pp
 For further discussions see RFC2292.
-.\"
 .Sh DIAGNOSTICS
 A socket operation may fail with one of the following errors returned:
 .Bl -tag -width [EADDRNOTAVAIL]
@@ -228,7 +224,6 @@ an internal data structure;
 when an attempt is made to create a
 socket with a network address for which no network interface exists.
 .El
-."
 .Sh SEE ALSO
 .Xr send 2 ,
 .Xr recv 2 ,
@@ -251,7 +246,6 @@ socket with a network address for which no network interface exists.
 .%D December 1998
 .%T "Internet Control Message Protocol (ICMPv6) for the Internet Protocol Version 6 (IPv6) Specification"
 .Re
-."
 .Sh HISTORY
 The implementation is based on KAME stack
 .Po
