--- a/share/man/man4/iophy.4
+++ b/share/man/man4/iophy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iophy.4,v 1.3 2000/10/18 02:38:22 aaron Exp $
+.\"	$OpenBSD: iophy.4,v 1.4 2001/06/22 12:15:45 mpech Exp $
 .\"	$NetBSD: iophy.4,v 1.3 1999/09/08 13:58:38 soren Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -50,8 +50,8 @@ The
 driver supports the Intel i82553 10/100 Ethernet PHYs found on some
 Intel i82557-based Ethernet cards.
 .Sh SEE ALSO
+.Xr fxp 4 ,
 .Xr ifmedia 4 ,
 .Xr intro 4 ,
 .Xr mii 4 ,
-.Xr fxp 4 ,
 .Xr ifconfig 8
