--- a/share/man/man4/kue.4
+++ b/share/man/man4/kue.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: kue.4,v 1.4 2000/12/06 22:44:44 deraadt Exp $
+.\" $OpenBSD: kue.4,v 1.5 2001/06/22 12:15:46 mpech Exp $
 .\" $NetBSD: kue.4,v 1.5 2000/03/20 01:34:22 augustss Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999, 2000
@@ -89,9 +89,9 @@ The driver failed to allocate an mbuf for the receiver ring.
 .El
 .Sh SEE ALSO
 .Xr arp 4 ,
-.Xr ifconfig 8 ,
 .Xr netintro 4 ,
-.Xr usb 4
+.Xr usb 4 ,
+.Xr ifconfig 8
 .Sh HISTORY
 The
 .Nm
