--- a/share/man/man4/lkm.4
+++ b/share/man/man4/lkm.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: lkm.4,v 1.10 2000/11/10 20:02:16 todd Exp $
+.\"	$OpenBSD: lkm.4,v 1.11 2001/06/22 12:15:46 mpech Exp $
 .\"	$NetBSD: lkm.4,v 1.4 1994/11/30 16:22:22 jtc Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
@@ -121,6 +121,7 @@ interface device
 file containing definitions of module types
 .It Pa /usr/share/lkm
 example source code implementing several of the modules types
+.El
 .Sh SEE ALSO
 .Xr modload 8 ,
 .Xr modstat 8 ,
