--- a/share/man/man4/lmc.4
+++ b/share/man/man4/lmc.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: lmc.4,v 1.10 2001/05/15 09:07:06 deraadt Exp $
+.\" $OpenBSD: lmc.4,v 1.11 2001/06/22 12:15:46 mpech Exp $
 .\"
 .\" Copyright (c) 1999 Chris Cappuccio
 .\"
@@ -89,8 +89,8 @@ Only available if compiled with LMC_DEBUG
 .Xr intro 4 ,
 .Xr netintro 4 ,
 .Xr sppp 4 ,
-.Xr lmccontrol 8 ,
-.Xr ifconfig 8
+.Xr ifconfig 8 ,
+.Xr lmccontrol 8
 .Pp
 Lan Media Corporation has a web site with data, descriptions, and pictures
 of their cards at www.lanmedia.com.
@@ -100,5 +100,8 @@ The
 device driver was written by Michael Graff, and was derived in part from
 Matt Thomas'
 .Xr de 4
-driver.  The OpenBSD port and manual page are from Chris Cappuccio.  Later
+driver. 
+The
+.Ox
+port and manual page are from Chris Cappuccio.  Later
 enhancements to support the LMC1200 card are based on LMC's Linux driver.
