--- a/share/man/man4/pms.4
+++ b/share/man/man4/pms.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pms.4,v 1.1 2001/02/20 21:45:05 jbm Exp $
+.\" $OpenBSD: pms.4,v 1.2 2001/06/22 12:15:46 mpech Exp $
 .\" $NetBSD: pms.4,v 1.4 2000/07/05 15:45:34 msaitoh Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
@@ -63,8 +63,8 @@ Mouse related data are accessed by
 .Xr wsmouse 4
 devices.
 .Sh SEE ALSO
-.Xr wsmouse 4 ,
 .Xr lms 4 ,
 .Xr mms 4 ,
-.Xr ums 4 ,
 .Xr pckbc 4 ,
+.Xr ums 4 ,
+.Xr wsmouse 4
