--- a/share/man/man4/sd.4
+++ b/share/man/man4/sd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sd.4,v 1.4 2001/03/06 22:20:26 brad Exp $
+.\"	$OpenBSD: sd.4,v 1.5 2001/06/22 12:15:46 mpech Exp $
 .\"	$NetBSD: sd.4,v 1.3 1996/10/20 23:15:23 explorer Exp $
 .\"
 .\" Copyright (c) 1996
@@ -37,7 +37,7 @@
 .Cd sd3 at scsibus0 target 3 lun 0
 .Sh DESCRIPTION
 The
-.Nm sd
+.Nm
 driver provides support for a
 .Tn SCSI
 disk. It allows the disk
