--- a/share/man/man4/ses.4
+++ b/share/man/man4/ses.4
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ses.4,v 1.4 2000/04/03 02:30:59 aaron Exp $
+.\" $OpenBSD: ses.4,v 1.5 2001/06/22 12:15:46 mpech Exp $
 .\"
 .Dd February 22, 2000
 .Dt SES 4
@@ -35,7 +35,7 @@
 .Cd ses* at scsibus? target ? lun ?
 .Sh DESCRIPTION
 The
-.Nm ses
+.Nm
 driver provides support for all
 .Tn SCSI
 devices of the environmental services class that are attached to the system
@@ -89,6 +89,7 @@ devices often have descriptive text for an object which can tell
 you things like location (e.g, "left power supply").
 .It Dv SESIOC_INIT
 Initialize the enclosure.
+.El
 .Sh FILES
 .Bl -tag -width /dev/rsdXXXXX -compact
 .It Pa /dev/ses Ns Ar N
@@ -98,9 +99,10 @@ When the kernel is configured with
 .Tn DEBUG
 enabled, the first open to an SES device will spit out overall enclosure
 parameters to the console.
+.El
 .Sh SEE ALSO
-.Xr sesd 8 ,
 .Xr getencstat 8 ,
+.Xr sesd 8 ,
 .Xr setencstat 8 ,
 .Xr setobjstat 8
 .Sh HISTORY
