--- a/share/man/man4/siop.4
+++ b/share/man/man4/siop.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: siop.4,v 1.3 2001/03/10 17:01:23 krw Exp $
+.\"	$OpenBSD: siop.4,v 1.4 2001/06/22 12:15:47 mpech Exp $
 .\"	$NetBSD: siop.4,v 1.3 2000/10/23 16:38:10 bouyer Exp $
 .\"
 .\" Copyright (c) 2000 Manuel Bouyer.
@@ -101,13 +101,13 @@ driver which supported most of these devices.
 .Xr st 4 ,
 .Xr uk 4
 .Pp
-.Pa http://www.lsilogic.com
+.Pa http://www.lsilogic.com/
 .Sh HISTORY
 The
 .Nm
 driver first appeared in
 .Nx 1.5 .
-.Sh AUTHOR
+.Sh AUTHORS
 The
 .Nm
 driver was written by Manuel Bouyer
