--- a/share/man/man4/sk.4
+++ b/share/man/man4/sk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sk.4,v 1.11 2001/04/20 16:06:25 deraadt Exp $
+.\"	$OpenBSD: sk.4,v 1.12 2001/06/22 12:15:47 mpech Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -113,7 +113,6 @@ To view a list of media types and options supported by your card try
 .Ic ifconfig -m <device> .
 For example,
 .Ic ifconfig -m sk0 .
-.Pp
 .Sh DIAGNOSTICS
 .Bl -diag
 .It "sk%d: couldn't map memory"
