--- a/share/man/man4/sl.4
+++ b/share/man/man4/sl.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sl.4,v 1.5 2000/12/21 21:01:19 aaron Exp $
+.\"	$OpenBSD: sl.4,v 1.6 2001/06/22 12:15:47 mpech Exp $
 .\"	$NetBSD: sl.4,v 1.1 1996/08/10 21:26:14 explorer Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -45,7 +45,7 @@
 .Op Ar count
 .Sh DESCRIPTION
 The
-.Nm sl
+.Nm
 interface allows serial lines to be used as network interfaces using the
 .Em slip
 protocol.  The
