--- a/share/man/man4/sv.4
+++ b/share/man/man4/sv.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: sv.4,v 1.7 2000/07/14 20:41:34 deraadt Exp $
+.\" $OpenBSD: sv.4,v 1.8 2001/06/22 12:15:47 mpech Exp $
 .\"
 .\" Copyright (c) 1998 Constantine Paul Sapuntzakis
 .\" All rights reserved
@@ -47,10 +47,9 @@ recommended for higher quality audio. This can be done in software
 by issuing the
 .Bd -literal -offset indent
 mixerctl -w outputs.spatial=off
-
 .Ed
-command.
 .Pp
+command.
 .Sh SEE ALSO
 .Xr audio 4 ,
 .Xr mixer 4
