--- a/share/man/man4/tcic.4
+++ b/share/man/man4/tcic.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tcic.4,v 1.2 2000/07/05 13:50:35 aaron Exp $
+.\" $OpenBSD: tcic.4,v 1.3 2001/06/22 12:15:47 mpech Exp $
 .\" $NetBSD: tcic.4,v 1.1 2000/02/12 11:14:14 fair Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -50,9 +50,9 @@ DB86082, DB86084, DB86184, and DB86072
 .Tn PCMCIA
 controllers.
 .Sh SEE ALSO
-.Xr pcmcia 4 ,
+.Xr isa 4 ,
 .Xr pcic 4 ,
-.Xr isa 4
+.Xr pcmcia 4
 .Sh HISTORY
 The
 .Nm
