--- a/share/man/man4/termios.4
+++ b/share/man/man4/termios.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: termios.4,v 1.13 2000/12/21 21:01:20 aaron Exp $
+.\"	$OpenBSD: termios.4,v 1.14 2001/06/22 12:15:47 mpech Exp $
 .\"	$NetBSD: termios.4,v 1.5 1994/11/30 16:22:36 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1992, 1993
@@ -1109,7 +1109,7 @@ is set, the receiver is enabled.  Otherwise, no character is
 received.
 Not all hardware supports this bit.  In fact, this flag
 is pretty silly and if it were not part of the
-.Nm termios
+.Nm
 specification
 it would be omitted.
 .Pp
