--- a/share/man/man4/uk.4
+++ b/share/man/man4/uk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uk.4,v 1.6 1999/07/09 13:35:48 aaron Exp $
+.\"	$OpenBSD: uk.4,v 1.7 2001/06/22 12:15:47 mpech Exp $
 .\"	$NetBSD: uk.4,v 1.3 1996/10/20 23:15:26 explorer Exp $
 .\"
 .\" Copyright (c) 1996
@@ -36,7 +36,7 @@
 .Nm uk* at scsibus? target ? lun ?
 .Sh DESCRIPTION
 The
-.Nm uk
+.Nm
 driver provides support for a
 process to address devices on the scsi bus for which there is no configured
 driver.
