--- a/share/man/man4/wsmouse.4
+++ b/share/man/man4/wsmouse.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wsmouse.4,v 1.3 2001/03/27 22:44:55 aaron Exp $
+.\" $OpenBSD: wsmouse.4,v 1.4 2001/06/22 12:15:47 mpech Exp $
 .\" $NetBSD: wsmouse.4,v 1.3 1999/12/06 14:52:08 augustss Exp $
 .\"
 .Dd March 20, 1999
@@ -47,10 +47,10 @@ utility gives access to these variables.
 .It Pa /usr/include/dev/wscons/wsconsio.h
 .El
 .Sh SEE ALSO
-.Xr wscons 4 ,
-.Xr wsconsctl 8 ,
-.Xr wsmux 4 ,
-.Xr pms 4 ,
 .Xr lms 4 ,
 .Xr mms 4 ,
-.Xr ums 4
+.Xr pms 4 ,
+.Xr ums 4 ,
+.Xr wscons 4 ,
+.Xr wsmux 4 ,
+.Xr wsconsctl 8
