--- a/share/man/man4/wsmux.4
+++ b/share/man/man4/wsmux.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wsmux.4,v 1.3 2000/12/21 21:01:22 aaron Exp $
+.\" $OpenBSD: wsmux.4,v 1.4 2001/06/22 12:15:48 mpech Exp $
 .\" $NetBSD: wsmux.4,v 1.2 1999/11/03 22:01:40 castor Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -78,7 +78,6 @@ This is used by the
 .Xr moused 8
 daemon to take data from a mouse connected to a serial port and
 make it appear on the standard mouse mux.
-.Pp
 .Sh FILES
 .Bl -item
 .It
@@ -89,11 +88,11 @@ make it appear on the standard mouse mux.
 .Pa /usr/include/dev/wscons/wsconsio.h .
 .El
 .Sh SEE ALSO
-.Xr moused 8 ,
 .Xr wscons 4 ,
 .Xr wsdisplay 4 ,
 .Xr wskbd 4 ,
 .Xr wsmouse 4 ,
+.Xr moused 8 ,
 .Xr wsconscfg 8 ,
 .Xr wsconsctl 8 ,
 .Xr wsfontload 8
