--- a/share/man/man4/wx.4
+++ b/share/man/man4/wx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wx.4,v 1.10 2001/06/20 15:55:40 pvalchev Exp $
+.\"	$OpenBSD: wx.4,v 1.11 2001/06/22 12:15:48 mpech Exp $
 .\"
 .\" Copyright (c) 2000
 .\"	Traakan Software. All rights reserved.
@@ -36,7 +36,7 @@
 .Cd "wx* at pci? dev ? function ?"
 .Sh DESCRIPTION
 The
-.Nm wx
+.Nm
 driver provides support for Intel Gigabit Ethernet PCI cards based on the
 .Tn i82452
 chipset such as the Intel Pro/1000, PRO1000F, and PRO1000T
