--- a/sbin/ping6/ping6.8
+++ b/sbin/ping6/ping6.8
@@ -1,5 +1,5 @@
-.\"	$OpenBSD: ping6.8,v 1.15 2001/03/19 06:54:15 itojun Exp $
-.\"	$KAME: ping6.8,v 1.37 2001/03/19 06:54:22 itojun Exp $
+.\"	$OpenBSD: ping6.8,v 1.16 2001/06/22 13:20:21 itojun Exp $
+.\"	$KAME: ping6.8,v 1.40 2001/06/22 13:16:02 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
 .\" All rights reserved.
@@ -39,9 +39,9 @@ packets to network hosts
 .Sh SYNOPSIS
 .Nm ping6
 .\" without ipsec, or new ipsec
-.Op Fl dfHnNqRtvw
+.Op Fl dfHnNqRtvwW
 .\" old ipsec
-.\" .Op Fl AdEfnNqRtvw
+.\" .Op Fl AdEfnNqRtvwW
 .Bk -words
 .Op Fl a Ar addrtype
 .Ek
@@ -417,6 +417,9 @@ ping6 -a agl dst.foo.com
 .Pp
 .Sh SEE ALSO
 .Xr netstat 1 ,
+.Xr icmp6 4 ,
+.Xr inet6 4 ,
+.Xr ip6 4 ,
 .Xr ifconfig 8 ,
 .Xr ping 8 ,
 .Xr routed 8 ,
@@ -432,8 +435,8 @@ ping6 -a agl dst.foo.com
 .Rs
 .%A Matt Crawford
 .%T "IPv6 Node Information Queries"
-.%N draft-ietf-ipngwg-icmp-name-lookups-06.txt
-.%D July 2000
+.%N draft-ietf-ipngwg-icmp-name-lookups-07.txt
+.%D August 2000
 .%O work in progress material
 .Re
 .Sh HISTORY
