--- a/kerberosV/src/lib/krb5/krb5_init_context.3
+++ b/kerberosV/src/lib/krb5/krb5_init_context.3
@@ -11,7 +11,7 @@
 .Ft krb5_error_code
 .Fn krb5_init_context "krb5_context *context"
 .Ft void
-.Fn krb5_free_context "krb5_context *context"
+.Fn krb5_free_context "krb5_context context"
 .Sh DESCRIPTION
 The
 .Fn krb5_init_context
