--- a/share/man/man4/hifn.4
+++ b/share/man/man4/hifn.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hifn.4,v 1.16 2001/06/22 19:13:47 jason Exp $
+.\"	$OpenBSD: hifn.4,v 1.17 2001/06/22 23:31:34 deraadt Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt
 .\" All rights reserved.
@@ -31,14 +31,14 @@
 .Os
 .Sh NAME
 .Nm hifn
-.Nd Hi/fn 7751/7951 symmetric crypto accelerator
+.Nd Hi/fn 7751/7951 crypto accelerator
 .Sh SYNOPSIS
 .Cd "hifn* at pci? dev ? function ?"
 .Sh DESCRIPTION
 The
 .Nm
-driver supports various cards containing the Hi/fn 7751 or Hi/Fn 7951 chipsets,
-such as
+driver supports various cards containing the Hi/fn 7751 or Hi/Fn 7951
+chipsets, such as
 .Bl -tag -width namenamenamena -offset indent
 .It Invertex AEON
 No longer being made.  Came as 128KB SRAM model, or 2MB DRAM model.
