join .%A entries; most by bk@rt.fm

--- a/sbin/newfs/newfs.8
+++ b/sbin/newfs/newfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: newfs.8,v 1.25 2001/04/04 22:06:39 gluk Exp $
+.\"	$OpenBSD: newfs.8,v 1.26 2001/06/23 02:33:09 deraadt Exp $
 .\"	$NetBSD: newfs.8,v 1.12 1995/03/18 14:58:41 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1987, 1991, 1993, 1994
@@ -305,7 +305,7 @@ man page for possible options and their meanings.
 .%A W. Joy
 .%A S. Leffler
 .%A R. Fabry
-.%T A Fast File System for UNIX ,
+.%T A Fast File System for UNIX
 .%J ACM Transactions on Computer Systems 2
 .%V 3
 .%P pp 181-197
