--- a/sbin/newlfs/newlfs.8
+++ b/sbin/newlfs/newlfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: newlfs.8,v 1.9 2000/03/18 22:56:02 aaron Exp $
+.\"	$OpenBSD: newlfs.8,v 1.10 2001/06/23 02:33:09 deraadt Exp $
 .\"	$NetBSD: newlfs.8,v 1.2 1995/03/18 14:58:54 cgd Exp $
 .\"
 .\" Copyright (c) 1993
@@ -89,7 +89,7 @@ The size of the file system in sectors.
 .%A W. Joy
 .%A S. Leffler
 .%A R. Fabry
-.%T A Fast File System for UNIX ,
+.%T A Fast File System for UNIX
 .%J ACM Transactions on Computer Systems 2
 .%V 3
 .%P pp 181-197
