--- a/sbin/ping6/ping6.8
+++ b/sbin/ping6/ping6.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ping6.8,v 1.16 2001/06/22 13:20:21 itojun Exp $
+.\"	$OpenBSD: ping6.8,v 1.17 2001/06/23 02:33:10 deraadt Exp $
 .\"	$KAME: ping6.8,v 1.40 2001/06/22 13:16:02 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -426,8 +426,7 @@ ping6 -a agl dst.foo.com
 .Xr traceroute 8 ,
 .Xr traceroute6 8
 .Rs
-.%A A. Conta
-.%A S. Deering
+.%A A. Conta and S. Deering
 .%T "Internet Control Message Protocol (ICMPv6) for the Internet Protocol Version 6 (IPv6) Specification"
 .%N RFC2463
 .%D December 1998
