--- a/share/man/man4/ip6.4
+++ b/share/man/man4/ip6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ip6.4,v 1.7 2001/06/22 12:15:45 mpech Exp $
+.\"	$OpenBSD: ip6.4,v 1.8 2001/06/23 02:33:12 deraadt Exp $
 .\"	$KAME: ip6.4,v 1.12 2000/06/08 21:19:39 itojun Exp $
 .\"
 .\" Copyright (C) 1999 WIDE Project.
@@ -615,16 +615,14 @@ The ancillary data items were improperly formed, or option name was unknown.
 .Xr icmp6 4 ,
 .Xr inet6 4
 .Rs
-.%A W. Stevens
-.%A M. Thomas
+.%A W. Stevens and M. Thomas
 .%R RFC
 .%N 2292
 .%D February 1998
 .%T "Advanced Sockets API for IPv6"
 .Re
 .Rs
-.%A S. Deering
-.%A R. Hinden
+.%A S. Deering and R. Hinden
 .%R RFC
 .%N 2460
 .%D December 1998
