--- a/games/rogue/rogue.6
+++ b/games/rogue/rogue.6
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rogue.6,v 1.5 2001/06/06 20:52:22 pjanzen Exp $
+.\"	$OpenBSD: rogue.6,v 1.6 2001/06/23 02:33:20 deraadt Exp $
 .\"
 .\" Copyright (c) 1988, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -93,8 +93,7 @@ Default save file
 .El
 .Sh SEE ALSO
 .Rs
-.%A Michael C. Toy
-.%A Kenneth C. R. C. Arnold
+.%A Michael C. Toy and Kenneth C. R. C. Arnold
 .%T A guide to the Dungeons of Doom
 .Re
 .Sh AUTHORS
