--- a/share/man/man4/faith.4
+++ b/share/man/man4/faith.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: faith.4,v 1.7 2000/11/24 10:25:12 itojun Exp $
+.\"	$OpenBSD: faith.4,v 1.8 2001/06/23 02:33:11 deraadt Exp $
 .\"	$KAME: faith.4,v 1.7 2000/11/24 10:15:06 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -110,8 +110,7 @@ interface is intended to be used on routers, not on hosts.
 .Xr inet6 4 ,
 .Xr faithd 8
 .Rs
-.%A Jun-ichiro itojun Hagino
-.%A Kazu Yamamoto
+.%A Jun-ichiro itojun Hagino and Kazu Yamamoto
 .%T "An IPv6-to-IPv4 transport relay translator"
 .%R internet draft
 .%N draft-ietf-ngtrans-tcpudp-relay-01.txt
