--- a/share/man/man4/icmp6.4
+++ b/share/man/man4/icmp6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: icmp6.4,v 1.5 2001/06/22 12:15:45 mpech Exp $
+.\"	$OpenBSD: icmp6.4,v 1.6 2001/06/23 02:33:12 deraadt Exp $
 .\"	$KAME: icmp6.4,v 1.3 2000/11/24 08:44:40 itojun Exp $
 .\"
 .\" Copyright (C) 1999 WIDE Project.
@@ -231,16 +231,14 @@ socket with a network address for which no network interface exists.
 .Xr inet6 4 ,
 .Xr ip6 4
 .Rs
-.%A W. Stevens
-.%A M. Thomas
+.%A W. Stevens and M. Thomas
 .%R RFC
 .%N 2292
 .%D February 1998
 .%T "Advanced Sockets API for IPv6"
 .Re
 .Rs
-.%A A. Conta
-.%A S. Deering
+.%A A. Conta and S. Deering
 .%R RFC
 .%N 2463
 .%D December 1998
