--- a/usr.bin/chpass/chpass.1
+++ b/usr.bin/chpass/chpass.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chpass.1,v 1.20 2000/10/17 18:52:19 aaron Exp $
+.\"	$OpenBSD: chpass.1,v 1.21 2001/06/23 02:33:15 deraadt Exp $
 .\"	$NetBSD: chpass.1,v 1.7 1996/05/15 21:50:40 jtc Exp $
 .\"
 .\" Copyright (c) 1988, 1990, 1993
@@ -255,8 +255,7 @@ temporary copy of the user passwd information
 .Xr pwd_mkdb 8 ,
 .Xr vipw 8
 .Rs
-.%A Robert Morris
-.%A Ken Thompson
+.%A Robert Morris and Ken Thompson
 .%T "UNIX Password Security"
 .Re
 .Sh HISTORY
