--- a/usr.sbin/ifmcstat/ifmcstat.8
+++ b/usr.sbin/ifmcstat/ifmcstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifmcstat.8,v 1.4 2001/06/23 00:50:33 deraadt Exp $
+.\"	$OpenBSD: ifmcstat.8,v 1.5 2001/06/23 02:33:22 deraadt Exp $
 .\"
 .\" Copyright (c) 1996 WIDE Project. All rights reserved.
 .\"
@@ -36,7 +36,6 @@ Only root can use
 .Sh SEE ALSO
 .Xr netstat 8
 .Pp
+.%A G. Malkin and R. Minnear
 .%R IPng for IPv6
 .%N RFC2080
-.%A G. Malkin
-.%A R. Minnear
