--- a/usr.sbin/spppcontrol/spppcontrol.8
+++ b/usr.sbin/spppcontrol/spppcontrol.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: spppcontrol.8,v 1.2 2000/10/17 19:06:31 aaron Exp $
+.\"	$OpenBSD: spppcontrol.8,v 1.3 2001/06/23 02:33:23 deraadt Exp $
 .\"
 .\" Copyright (C) 1997 by Joerg Wunsch, Dresden
 .\" All rights reserved.
@@ -213,8 +213,7 @@ by the previous example.
 .Xr sppp 4 ,
 .Xr ifconfig 8
 .Rs
-.%A B. Lloyd
-.%A W. Simpson
+.%A B. Lloyd and W. Simpson
 .%T "PPP Authentication Protocols"
 .%O RFC 1334
 .Re
