ok, tmac is now fixed

--- a/bin/ed/ed.1
+++ b/bin/ed/ed.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ed.1,v 1.31 2001/06/23 02:33:21 deraadt Exp $
+.\"	$OpenBSD: ed.1,v 1.32 2001/06/23 05:57:02 deraadt Exp $
 .\"
 .Dd May 2, 1993
 .Dt ED 1
@@ -892,7 +892,8 @@ attempts to write the buffer if the terminal hangs up
 USD:12-13
 .Pp
 .Rs
-.%A B. W. Kernighan and P. J. Plauger
+.%A B. W. Kernighan
+.%A P. J. Plauger
 .%B Software Tools in Pascal
 .%O Addison-Wesley
 .%D 1981
