--- a/share/man/man4/inet6.4
+++ b/share/man/man4/inet6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: inet6.4,v 1.20 2001/06/23 02:33:12 deraadt Exp $
+.\"	$OpenBSD: inet6.4,v 1.21 2001/06/23 05:57:05 deraadt Exp $
 .\"	$KAME: inet6.4,v 1.19 2000/11/24 10:13:18 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -359,7 +359,8 @@ If you need to accept both IPv4 and IPv6 traffic, listen to two sockets.
 .Xr udp 4
 .Sh STANDARDS
 .Rs
-.%A Tatsuya Jinmei and Atsushi Onoe
+.%A Tatsuya Jinmei
+.%A Atsushi Onoe
 .%T "An Extension of Format for IPv6 Scoped Addresses"
 .%R internet draft
 .%D June 2000
