--- a/usr.bin/passwd/passwd.1
+++ b/usr.bin/passwd/passwd.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: passwd.1,v 1.15 2001/06/23 02:33:16 deraadt Exp $
+.\"	$OpenBSD: passwd.1,v 1.16 2001/06/23 05:57:07 deraadt Exp $
 .\"
 .\" Copyright (c) 1990 The Regents of the University of California.
 .\" All rights reserved.
@@ -164,7 +164,8 @@ lock file for the passwd database
 .Xr pwd_mkdb 8 ,
 .Xr vipw 8
 .Rs
-.%A Robert Morris and Ken Thompson
+.%A Robert Morris
+.%A Ken Thompson
 .%T "UNIX password security"
 .Re
 .Sh HISTORY
