--- a/usr.sbin/faithd/faithd.8
+++ b/usr.sbin/faithd/faithd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: faithd.8,v 1.15 2001/06/23 02:33:07 deraadt Exp $
+.\"	$OpenBSD: faithd.8,v 1.16 2001/06/23 05:57:09 deraadt Exp $
 .\"	$KAME: faithd.8,v 1.28 2001/04/25 11:24:15 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -329,7 +329,8 @@ on error.
 .Xr route 8 ,
 .Xr sysctl 8
 .Rs
-.%A Jun-ichiro itojun Hagino and Kazu Yamamoto
+.%A Jun-ichiro itojun Hagino
+.%A Kazu Yamamoto
 .%T "An IPv6-to-IPv4 transport relay translator"
 .%R internet draft
 .%N draft-ietf-ngtrans-tcpudp-relay-04.txt
