--- a/usr.sbin/ifmcstat/ifmcstat.8
+++ b/usr.sbin/ifmcstat/ifmcstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifmcstat.8,v 1.5 2001/06/23 02:33:22 deraadt Exp $
+.\"	$OpenBSD: ifmcstat.8,v 1.6 2001/06/23 05:57:10 deraadt Exp $
 .\"
 .\" Copyright (c) 1996 WIDE Project. All rights reserved.
 .\"
@@ -36,6 +36,7 @@ Only root can use
 .Sh SEE ALSO
 .Xr netstat 8
 .Pp
-.%A G. Malkin and R. Minnear
+.%A G. Malkin
+.%A R. Minnear
 .%R IPng for IPv6
 .%N RFC2080
