--- a/bin/date/date.1
+++ b/bin/date/date.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: date.1,v 1.30 2001/06/23 02:33:22 deraadt Exp $
+.\"	$OpenBSD: date.1,v 1.31 2001/06/23 05:57:02 deraadt Exp $
 .\"	$NetBSD: date.1,v 1.12 1996/03/12 04:32:37 phil Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -198,7 +198,8 @@ record of the user setting the time
 .Xr timed 8
 .Rs
 .%T "TSP: The Time Synchronization Protocol for UNIX 4.3BSD"
-.%A R. Gusella and S. Zatti
+.%A R. Gusella
+.%A S. Zatti
 .Re
 .Sh DIAGNOSTICS
 Exit status is 0 on success, 1 if unable to set the date, and 2
