--- a/usr.sbin/route6d/route6d.8
+++ b/usr.sbin/route6d/route6d.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: route6d.8,v 1.11 2001/06/23 02:33:08 deraadt Exp $
+.\"	$OpenBSD: route6d.8,v 1.12 2001/06/23 05:57:10 deraadt Exp $
 .\"	$KAME: route6d.8,v 1.9 2000/07/24 12:39:46 itojun Exp $
 .\"
 .\" Copyright (c) 1996 WIDE Project. All rights reserved.
@@ -213,7 +213,8 @@ or
 .\"
 .Sh SEE ALSO
 .Rs
-.%A G. Malkin and R. Minnear
+.%A G. Malkin
+.%A R. Minnear
 .%T RIPng for IPv6
 .%R RFC2080
 .%D January 1997
