--- a/usr.sbin/timed/timed/timed.8
+++ b/usr.sbin/timed/timed/timed.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: timed.8,v 1.7 2001/06/23 02:33:00 deraadt Exp $
+.\"	$OpenBSD: timed.8,v 1.8 2001/06/23 05:57:11 deraadt Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -217,7 +217,8 @@ log file for master
 .Xr timedc 8
 .Rs
 .%T "TSP: The Time Synchronization Protocol for UNIX 4.3BSD"
-.%A R. Gusella and S. Zatti
+.%A R. Gusella
+.%A S. Zatti
 .Re
 .Sh HISTORY
 The
