--- a/share/man/man4/txp.4
+++ b/share/man/man4/txp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: txp.4,v 1.5 2001/05/24 19:12:18 aaron Exp $
+.\"     $OpenBSD: txp.4,v 1.6 2001/06/23 06:24:16 jason Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -59,11 +59,20 @@ This driver supports the following cards:
 .Pp
 Basic Ethernet functions are provided as well as support for
 .Xr vlan 4
-tag removal and insertion assistance.
-There is no support currently for
+tag removal and insertion assistance, receive
 .Xr ip 4 ,
 .Xr tcp 4 ,
 and
+.Xr udp 4
+checksum offloading,
+and
+transmit
+.Xr ip 4
+checksum offloading.
+There is currently no support for
+transmit 
+.Xr tcp 4
+or
 .Xr udp 4
 checksum offloading,
 .Xr tcp 4
